# pytorch-playground

./: .gitignore  README.md  pyproject.toml
CfC/: atari_behavior_cloning.ipynb  cfc_for_state_estimation.ipynb  first_steps.ipynb
DeepImplicitLayers/: fixed_point_iteration_layer.py
Lightning/: callbacks.py  early_stopping.py  load_from_checkpoint.py  pretrained_modules.py  train_a_model.py  validate_and_test.py
RL/: A2C_continuous.py
UAV_tutorials/: tutorial_03_activation_functions.py  tutorial_05_modern_CNNs.py  tutorial_08_energy_based_models.py  tutorial_11_normalizing_flows.py  utils.py
