[tool.poetry]
name = "pytorch_playground"
version = "0.1.0"
description = "Playground for PyTorch with tutorials and small projects."
authors = ["achimvp <prittwitza@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
tensorboard = "^2.16.2"
torchvision = "^0.17.1"
lightning = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
tabulate = "^0.9.0"
ncps = "^0.0.7"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = {version = "^24.2.0", allow-prereleases = true}
ipykernel = "^6.29.4"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
